--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Append</title>
+    <title>Advance JavaScript</title>
   </head>
   <body>
     <ul id="app"></ul>
-    <div id='web'></div>
+    <div id="web"></div>
     <script src="/index.js"></script>
+    <script src="/indexls.js"></script>
   </body>
 </html>
